--- a/platformio.ini
+++ b/platformio.ini
@@ -24,10 +24,30 @@ board_build.partitions = huge_app.csv
 board_build.flash_mode = qio
 board_build.flash_size = 4MB
 board_build.psram_type = opi
-lib_deps = 
+lib_deps =
     h2zero/NimBLE-Arduino@^1.4.0
     bblanchon/ArduinoJson@^6.21.0
-build_flags = 
+build_flags =
     -DARDUINO_USB_MODE=1
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DCONFIG_BT_NIMBLE_ENABLED=1
+
+[env:adafruit_feather_esp32s3_reversetft]
+platform = espressif32
+board = adafruit_feather_esp32s3_reversetft
+framework = arduino
+monitor_speed = 115200
+board_build.partitions = huge_app.csv
+board_build.flash_mode = qio
+board_build.flash_size = 4MB
+lib_deps =
+    h2zero/NimBLE-Arduino@^1.4.0
+    bblanchon/ArduinoJson@^6.21.0
+    adafruit/Adafruit ST7735 and ST7789 Library@^1.10.0
+    adafruit/Adafruit GFX Library@^1.11.0
+build_flags =
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DCONFIG_BT_NIMBLE_ENABLED=1
+    -DHAS_TFT=1
+    -DBUZZER_PIN_OVERRIDE=18
